objects/AW_BenefitCodeAndCategoryMapping__mdt.object
<CustomObject>
    <description>Insurance Policy Coverage code mapping Records</description>
    <fields>
        <fullName>AW_BenefitName__c</fullName>
        <description>Name of the Benefit type</description>
        <label>Benefit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CoverCategory__c</fullName>
        <description>The main category of the cover type</description>
        <label>Cover Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_CoverSubCategory__c</fullName>
        <description>The sub category of the cover type</description>
        <label>Cover Sub Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_TypeCode__c</fullName>
        <description>This is populated through the Quote Sync process</description>
        <label>Type Code</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>BenefitCodeAndCategoryMapping</label>
    <listViews>
        <fullName>All_Mappingss</fullName>
        <columns>DeveloperName</columns>
        <columns>MasterLabel</columns>
        <columns>AW_TypeCode__c</columns>
        <columns>AW_BenefitName__c</columns>
        <columns>AW_CoverCategory__c</columns>
        <columns>AW_CoverSubCategory__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Mappings</label>
    </listViews>
    <pluralLabel>BenefitCodeAndCategoryMappings</pluralLabel>
</CustomObject>